--- a/css/home.css
+++ b/css/home.css
@@ -131,6 +131,7 @@ body,html{
 .list{
 	position: fixed;
 	text-align: center;
+	z-index:1;
 }
 
 .item {
@@ -157,7 +158,6 @@ body,html{
 	width: inherit;
 	height: inherit;
 	border-radius: 50%;
-	opacity: 0;
 	
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
@@ -165,18 +165,17 @@ body,html{
 	-ms-transition: all 0.4s ease-in-out;
 	transition: all 0.4s ease-in-out;
 	
-	-webkit-transform: scale(0);
-	-moz-transform: scale(0);
-	-o-transform: scale(0);
-	-ms-transform: scale(0);
-	transform: scale(0);
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	-o-transform: scale(0.8);
+	-ms-transform: scale(0.8);
+	transform: scale(0.8);
 	
 	-webkit-backface-visibility: hidden;
 }
 
 .otherlist h3 {
 	color: #fff;
-	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-size: 22px;
 	padding: 15px 0 0 0;
@@ -185,19 +184,6 @@ body,html{
 	text-shadow: 
 		0 0 1px #fff, 
 		0 1px 2px rgba(0,0,0,0.3);
-}
-
-.info p {
-	color: #fff;
-	margin: 0 20px;
-	font-size: 12px;
-	border-top: 1px solid rgba(255,255,255,0.5);
-	opacity: 0;
-	-webkit-transition: all .1s ease-in-out 0.4s;
-	-moz-transition: all .1s ease-in-out 0.4s;
-	-o-transition: all .1s ease-in-out 0.4s;
-	-ms-transition: all .1s ease-in-out 0.4s;
-	transition: all .1s ease-in-out 0.4s;
 }
 
 .info a {
@@ -227,9 +213,5 @@ body,html{
 	-o-transform: scale(1);
 	-ms-transform: scale(1);
 	transform: scale(1);
-	opacity: 1;
-}
-
-.item:hover .info p {
 	opacity: 1;
 }
